# pendon

./: .dprint.json  .gitignore  Cargo.toml  LICENSE  README.md  lefthook.yaml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli_spec.rs  custom_spec.rs  extract_heading_spec.rs  html_spec.rs  sectionize_spec.rs  solid_spec.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  heading.rs  lexer.rs  lib.rs  options.rs  parser.rs
crates/core/tests/: lexer_spec.rs  parser_spec.rs
crates/plugin-codeblock-syntect/: Cargo.toml  README.md
crates/plugin-codeblock-syntect/src/: highlight.rs  info.rs  inline.rs  lib.rs  wrap.rs
crates/plugin-codeblock-syntect/src/mappers/: default.rs  html.rs  js.rs  mod.rs
crates/plugin-custom/: Cargo.toml  README.md
crates/plugin-custom/src/: lib.rs  loader.rs  processor.rs  specs.rs
crates/plugin-custom/src/processor/: attrs.rs  block.rs  blockquote.rs  codefence.rs  util.rs
crates/plugin-dialog/: Cargo.toml  README.md
crates/plugin-dialog/src/: charmap.rs  lib.rs  markdown.rs  pipeline.rs  render.rs  tokenize.rs
crates/plugin-extract-heading/: Cargo.toml  README.md
crates/plugin-extract-heading/src/: lib.rs
crates/plugin-img/: Cargo.toml  README.md
crates/plugin-img/src/: lib.rs
crates/plugin-latex/: Cargo.toml
crates/plugin-latex/src/: lib.rs
crates/plugin-markdown/: Cargo.toml  README.md
crates/plugin-markdown/src/: context.rs  end.rs  helpers.rs  lib.rs  math.rs  start.rs  text.rs
crates/plugin-micomatter/: Cargo.toml  README.md
crates/plugin-micomatter/src/: lib.rs
crates/plugin-micromatter/: Cargo.toml  README.md
crates/plugin-micromatter/src/: lib.rs
crates/plugin-quiz/: Cargo.toml
crates/plugin-quiz/src/: lib.rs
crates/plugin-sectionize/: Cargo.toml  README.md
crates/plugin-sectionize/src/: lib.rs
crates/plugin-vicado/: Cargo.toml  README.md
crates/plugin-vicado/src/: lib.rs
crates/plugin-wiki/: Cargo.toml
crates/plugin-wiki/src/: infobox.rs  lib.rs  options.rs  util.rs  wikilink.rs
crates/renderer-ast/: Cargo.toml
crates/renderer-ast/src/: builder.rs  lib.rs
crates/renderer-events/: Cargo.toml
crates/renderer-events/src/: lib.rs
crates/renderer-html/: Cargo.toml
crates/renderer-html/src/: compact.rs  lib.rs  pretty.rs  utils.rs
crates/renderer-json/: Cargo.toml
crates/renderer-json/src/: lib.rs
crates/renderer-solid/: Cargo.toml
crates/renderer-solid/src/: imports.rs  lib.rs  metadata.rs  node.rs  template.rs
crates/tui/: Cargo.toml
crates/tui/src/: assets.rs  lib.rs  mod.rs  templates.rs  theme.rs
crates/tui/src/widgets/: progress_bar.rs  spinner.rs
demo/: demo.md
tools/scope/: Cargo.toml
tools/scope/src/: main.rs
