[package]
name = "pendon"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Pendon CLI"

[dependencies]
pendon-core = { path = "../../crates/core" }
pendon-plugin-codeblock-syntect = { path = "../../crates/plugin-codeblock-syntect" }
pendon-plugin-custom = { path = "../../crates/plugin-custom" }
pendon-plugin-dialog = { path = "../../crates/plugin-dialog" }
pendon-plugin-extract-heading = { path = "../../crates/plugin-extract-heading" }
pendon-plugin-img = { path = "../../crates/plugin-img" }
pendon-plugin-latex = { path = "../../crates/plugin-latex" }
pendon-plugin-markdown = { path = "../../crates/plugin-markdown" }
pendon-plugin-micromatter = { path = "../../crates/plugin-micromatter" }
pendon-plugin-quiz = { path = "../../crates/plugin-quiz" }
pendon-plugin-sectionize = { path = "../../crates/plugin-sectionize" }
pendon-plugin-vicado = { path = "../../crates/plugin-vicado" }
pendon-plugin-wiki = { path = "../../crates/plugin-wiki" }
pendon-renderer-ast = { path = "../../crates/renderer-ast" }
pendon-renderer-events = { path = "../../crates/renderer-events" }
pendon-renderer-html = { path = "../../crates/renderer-html" }
pendon-renderer-json = { path = "../../crates/renderer-json" }
pendon-renderer-solid = { path = "../../crates/renderer-solid" }
pendon-tui = { path = "../../crates/tui" }
pico-args = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "html"] }
toml = "0.8"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "pendon"
path = "src/main.rs"
