[package]
name = "pendon-plugin-img"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Advanced image syntax plugin for Pendon"

[dependencies]
pendon-core = { path = "../core" }
pendon-plugin-markdown = { path = "../plugin-markdown" }
pendon-renderer-html = { path = "../renderer-html" }
