[package]
name = "pendon-plugin-quiz"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Quiz block plugin for Pendon"

[dependencies]
pendon-core = { path = "../core" }
pendon-renderer-html = { path = "../renderer-html" }
pendon-renderer-solid = { path = "../renderer-solid" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
