[package]
name = "pendon-renderer-json"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "JSON renderer for Pendon's event stream"

[dependencies]
pendon-core = { path = "../core" }
pendon-renderer-ast = { path = "../renderer-ast" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
