[package]
name = "pendon-renderer-solid"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Pendon Solid renderer (AST → TSX)"

[dependencies]
pendon-core = { path = "../core" }
pendon-renderer-ast = { path = "../renderer-ast" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
