[package]
name = "pendon-tui"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "TUI utilities for Pendon CLI"

[features]
default = ["ascii"]
ascii = []
nerd-fonts = []

[dependencies]
crossterm = "0.27"
is-terminal = "0.4"
once_cell = "1"
unicode-width = "0.1"

[lib]
path = "src/lib.rs"
