[package]
name = "pendon-scope"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Internal tool: generate syntect scope/class lists"

[dependencies]
plist = "1"
regex = "1"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "html", "regex-onig"] }

[[bin]]
name = "pendon-scope"
path = "src/main.rs"
